overlays/prod/personal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
  selector:
    app: personal
