overlays/prod/personal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hawton-cloud
  namespace: zan
spec:
  ingressClassName: nginx
  rules:
  - host: hawton.cloud
    http:
      paths:
      - backend:
          service:
            name: personal
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hawton.cloud
    secretName: tls-hawton-cloud
